# frank

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  docker-compose.yml
.claude/: settings.json
history/: 260405_daily_retro.html  260405_daily_retro.md  260408_daily_retro.html  260408_presentation.html  260408_개념정리.md  260409_daily_retro.html  260409_daily_retro.md  260409_개념정리_도식화.html  260409b_daily_retro.html  260409b_daily_retro.md  260410_daily_retro.html  260410_daily_retro.md  260412_daily_retro.html  260412_daily_retro.md  260413_retro.md  260414_daily_retro.html  260414_daily_retro.md  260420_daily_retro.html  260420_daily_retro.md  260422_daily_retro.html  260422_daily_retro.md  260423_daily_retro.html  260423_daily_retro.md  260424_daily_retro.html  260424_daily_retro.md  260428_daily_retro.html  260428_daily_retro.md  INDEX.md  개념정리.md
progress/: 260404_MVP1_기획.md  260404_feed_loading_bug.md  260405_A_subtask_dag.d2  260405_MVP1.5_기획.md  260405_MVP2_iOS_로드맵.md  260405_claude_code_refactoring.md  260406_M2_인증플로우.md  260406_M3_온보딩.md  260406_M4_피드.md  260406_M5_기사상세.md  260406_M6_설정.md  260406_MVP3_M1_API_Contract.md  260406_MVP3_M2_웹전환.md  260406_MVP3_M3_iOS전환.md  260406_MVP3_M4_Apple로그인.md  260406_MVP3_통합_로드맵.md  260408_M2_회고.md  260408_M3_workflow_main.md  (+33 more)
server/: .env.example  Cargo.toml  Dockerfile  tarpaulin.toml
server/src/: lib.rs  main.rs
server/src/api/: articles.rs  favorites.rs  feed.rs  health.rs  likes.rs  mod.rs  profile.rs  quiz.rs  quiz_wrong_answers.rs  related.rs  summarize.rs  tags.rs
server/src/config/: mod.rs
server/src/domain/: error.rs  health.rs  mod.rs  models.rs  ports.rs
server/src/infra/: counted_search.rs  exa.rs  fake_crawl.rs  fake_db.rs  fake_favorites.rs  fake_llm.rs  fake_notification.rs  fake_quiz_wrong_answers.rs  fake_search.rs  feed_cache.rs  firecrawl.rs  groq.rs  http_utils.rs  imessage.rs  in_memory_counter.rs  mod.rs  openrouter.rs  postgres_counters.rs  postgres_db.rs  postgres_favorites.rs  postgres_quiz_wrong_answers.rs  search_chain.rs  supabase_db.rs  tavily.rs
server/src/middleware/: auth.rs
server/src/scheduler/: mod.rs
server/src/services/: collect_service.rs  likes_service.rs  mod.rs  notification_service.rs  quiz_service.rs  summary_service.rs  tag_service.rs
(+485 files in other folders)
